--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "gulp:html": "gulp html",
         "gulp:manifest": "gulp manifest",
         "gulp:fonts": "gulp fonts",
-        "build": "gulp build"
+        "build": "gulp build",
+        "watch": "watch 'npm run build' ./src"
     },
     "devDependencies": {
         "autoprefixer": "^9.5.1",
@@ -25,6 +26,7 @@
         "gulp-sourcemaps": "^2.6.5",
         "gulp-uglify": "^3.0.2",
         "gulp-util": "^3.0.8",
-        "gulp-wait": "0.0.2"
+        "gulp-wait": "0.0.2",
+        "watch": "^1.0.2"
     }
 }
